# regulated-data-pipelines

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: architecture.mmd
src/pipeline/: __init__.py  audit.py  lineage.py  run.py
src/pipeline/models/: __init__.py  healthcare.py
src/pipeline/pii/: __init__.py  detector.py
src/pipeline/quality/: __init__.py  validator.py
src/pipeline/transforms/: __init__.py  etl.py
tests/: __init__.py  test_models.py  test_pii.py  test_pipeline.py  test_quality.py  test_transforms_audit.py
