[project]
name = "regulated-data-pipelines"
version = "1.0.0"
description = "HIPAA-compliant ETL patterns with PII detection, audit logging, and data lineage for healthcare environments"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Christopher Mangun", email = "cmangun@gmail.com" }]
requires-python = ">=3.11"
keywords = ["etl", "pipeline", "compliance", "audit", "healthcare", "hipaa", "pii", "phi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.9.2",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.4",
    "mypy>=1.8.0",
]
connectors = [
    "sqlalchemy>=2.0.0",
    "boto3>=1.34.0",
]

[project.scripts]
pipeline = "pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/cmangun/regulated-data-pipelines"
Documentation = "https://github.com/cmangun/regulated-data-pipelines#readme"
Repository = "https://github.com/cmangun/regulated-data-pipelines.git"
Portfolio = "https://healthcare-ai-consultant.com"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
strict = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
